[workspace]
members = ["examples/crate", "examples/workspace", "include-utils-macro"]
resolver = "2"

# Common workspace metadata.
[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
documentation = "https://docs.rs/include-utils"
homepage = "https://github.com/alekseysidorov/include-utils"

[workspace.dependencies]
include-utils = { path = ".", version = "0.2.0", features = [
], default-features = false }
include-utils-macro = { path = "include-utils-macro", version = "0.2.0" }

cargo_metadata = "0.18.1"
itertools = "0.12.0"
pretty_assertions = "1.4.0"
proc-macro-error = { version = "1.0.4" }
proc-macro2 = "1.0.50"
quote = "1.0.15"
syn = "2.0.26"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"

# Root package
[package]
name = "include-utils"
description = "mdBook-like include macro as the powerful replacement for the standard `include_str` macro."
version.workspace = true
edition.workspace = true

license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
categories = ["development-tools"]
keywords = ["no_std", "documentation", "rustdoc"]

[dependencies]
include-utils-macro = { workspace = true }

[features]
default = []
# Enable looking up to the workspace root directory for the included files in addition to the 
# `CARGO_MANIFEST_PATH`.
workspace = ["include-utils-macro/workspace"]

[lints]
workspace = true
