[package]
name = "include-utils-macro"
description = "Internal proc macro for the `include-utils` crate."
version.workspace = true
edition.workspace = true

license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { workspace = true, optional = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
default = []
workspace = ["dep:cargo_metadata"]

[lints]
workspace = true
