[package]
name = "include-utils"
description = "mdBook-like include macro as the powerful replacement for the standard `include_str` macro."
version.workspace = true
edition.workspace = true

license.workspace = true
authors.workspace = true
categories = ["Development tools"]
keywords = ["no_std", "documentation", "rustdoc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-utils-macro = { workspace = true }
