[package]
name = "example-include-crate"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-utils = { workspace = true, default-features = false }

[lints]
workspace = true
