[package]
name = "example-include-workspace"

rust-version.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-utils = { workspace = true, features = ["workspace"] }

[lints]
workspace = true
